--- a/Website Dependancies/site.css
+++ b/Website Dependancies/site.css
@@ -9,7 +9,7 @@
 
 	}
 	section {
-		background-color: white;
+		background-color: rgb(71, 32, 149);
 		width: 100%;
 		margin-left: auto;
 		margin-right: auto;
