--- a/Website Dependancies/site.css
+++ b/Website Dependancies/site.css
@@ -33,7 +33,7 @@
 		flex: 1;
 	}
 	section { 
-	background-color: white;
+	background-color: rgb(15, 69, 216);
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
@@ -52,7 +52,7 @@ body {
 	font-family: 'Roboto Slab', serif;
 	margin: 0;
 	padding: 0;
-	background-color: white;
+	background-color: rgb(134, 61, 198);
 }
 
 h1 {
