--- a/Website Dependancies/site.css
+++ b/Website Dependancies/site.css
@@ -112,7 +112,7 @@ header {
 }
 
 .bg2 {
-	background-color: #001bff;
+	background-color: #2d83c9;
 }
 
 .bg3 {
@@ -128,7 +128,7 @@ iframe {
 
 footer {
 	height: 100px;
-	background-color: #001bff;
+	background-color: #68cf29;
 }
 
 #complete {
@@ -136,5 +136,5 @@ footer {
 }
 
 #incomplete {
-	background-color: red;
+	background-color: rgb(21, 236, 218);
 }
