--- a/Website Dependancies/site.css
+++ b/Website Dependancies/site.css
@@ -103,8 +103,8 @@ header {
 	background-color: #001bff;
 	margin-top: 0;
 	margin-bottom: 0;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	padding-top: 50%;
+	padding-bottom: 75%;
 }
 
 .bg1 {
