--- a/Website Dependancies/site.css
+++ b/Website Dependancies/site.css
@@ -100,7 +100,7 @@ img {
 
 
 header {
-	background-color: #001bff;
+	background-color: #5514d7;
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-top: 7%;
@@ -108,11 +108,11 @@ header {
 }
 
 .bg1 {
-	background-color: #1abec7;
+	background-color: #1d10c9;
 }
 
 .bg2 {
-	background-color: #2d83c9;
+	background-color: #2015b9;
 }
 
 .bg3 {
